tests/paczka1/small_fuzzy/30998427.err
Error in line 2: 1H7LHzf A497 15,8
Error in line 12: oJ6uTnY S993 11,0
